--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
 .body{
     /* background-color: blue; */
     overflow: hidden;
+    font-family: Raleway;
 }
 
 header {
@@ -35,28 +36,30 @@ header div {
     margin-bottom: 5%;
 }
 
-.logoWA {
+/* .logoWA {
     margin-top: 3%;
     width: 8%;
-}
+} */
 
 .dosTel {
     font-size: 16px;
     width: 220px;
     margin-top: 4%;
     margin-left: 2%;
+    font-family: Raleway;
 }
 
 .unTel {
     background-color: #eb1c74;
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
     width: 23%;
-    padding: 2%;
+    padding: 1.5%;
     margin-left: 3%;
     margin-right: 1%;
     margin-top: 5%;
     color: white;
+    font-family: Raleway;
 }
 
 
@@ -97,7 +100,11 @@ div#header.pos-f-t {
     padding-right: 5%;
     padding-top: 3%;
     padding-bottom: 3%;
-    font-size: 24px;
+    font-size: 22px;
+    font-family: Raleway;
+    font-weight: bold;
+    
+
 }
 
 p.otroFormato1 {
@@ -410,3 +417,101 @@ ul.footerItems {
     margin-left: 5%;
     width: 15%;
 }
+
+
+
+/* Mediaquerys */
+
+/* mobile */
+
+@media only screen and (max-width: 600px) {
+    .logoMonclair {
+        margin-left: 15%;
+    }
+    #header img.WA{
+        width: 65%;
+        margin-left: 80%;
+        margin-top: 60%;
+    }
+
+    .unTel {
+        background-color: #eb1c74;
+        text-align: center;
+        font-size: 12px;
+        width: 23%;
+        padding: 1.5%;
+        margin-left: 1%;
+        margin-left: -9%;
+        margin-top: 5%;
+        
+    }
+
+    div#header.pos-f-t {
+        margin-left: -2%;
+        margin-top: -0.1%;
+        width: 5%;
+        border: none;
+    }
+
+    .garantia {
+        float: left;
+        border: 1.5px solid #FF0000;
+        margin-right: 4%;
+        margin-bottom: 4%;
+        margin-left: 10%;
+        width: 80%;
+        padding-left: 18%;
+        padding-right: 5%;
+        padding-top: 4%;
+        padding-bottom: 3%;
+        font-size: 20px;
+        font-family: Raleway;
+        font-weight: bold;
+    }
+    p.linkItems {
+        float: left;
+        margin-top: 4%;
+    }
+    img.linkItems {
+        float: left;
+        margin-top: 5%;
+        margin-left: 60%;
+    }
+    img.linkItems:first-child {
+        margin-left: 65%;
+    }
+
+    img.linkItems2 {
+        width: 8%;
+        margin: 3%;
+        margin-left: 30%;
+    }
+    p.linkItems2 {
+        margin-top: 5%;
+    }
+    footer div {
+        overflow: hidden;
+        width: 80%;
+        margin-left: 10%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+    
+    }
+    
+
+    
+
+    div img.footerItems {
+        padding-right: 10%;
+    }
+
+    div.divTres {
+        width: 90%;
+        margin-left: 38%;
+    }
+
+    div.divTres:last-child {
+        margin-left: 32.4%;
+    }
+
+  }
